# barebones-mcu-compilation

./: .gitignore  README.md
notes/: linkerScript.ipynb  startup_disassembly.asm  the_startup_file.ipynb
notes/Low Byte Productions/: lesson1.ipynb  lesson2.ipynb  lesson2.md  lesson3.md
notes/build process and linker/: FlashingTargets.ipynb  linkerScript.ipynb  two_makefiles_and_relocation.ipynb
source/: Makefile  final.elf  final.map  led.c  led.h  stm32_ls.ld  stm32_startup.c
source/LinkerNotes/: Makefile  final.elf  final.map  led.c  led.h  main.c  stm32_ls.ld
source/LowByteProductions/: .gitignore  CMakeLists.txt  HowToCMake.md  README.html  README.md  build.sh  pyproject.toml
source/LowByteProductions/app/: Makefile  firmware.dump  firmware.elf  firmware.map
source/LowByteProductions/app/inc/core/: system.h
source/LowByteProductions/app/src/: firmware.c  firmware.d
source/LowByteProductions/app/src/core/: system.c  timer.c
source/LowByteProductions/firmware_tools/: gui.py
tools/: vectorTableGenerator.py
